--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -58,6 +58,6 @@
     </div>
 
     <div th:replace="fragments/footer :: footer" />
-    <script src="../static/asset/js/main.js"></script>
+    <script type="module" src="../static/asset/js/main.js"></script>
 </body>
 </html>
