--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -59,7 +59,7 @@
 
     <div th:replace="fragments/footer :: footer" />
 
-    <script src="../static/asset/js/detail.js"></script>
+    <script type="module" src="../static/asset/js/detail.js"></script>
 </body>
 
 </html>
