Working on Cookie (when not logged in)

--- a/src/main/webapp/WEB-INF/templates/main.html
+++ b/src/main/webapp/WEB-INF/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>로그인</title>
+    <title>메인 페이지</title>
     <link href="../static/asset/css/styles.css" rel="stylesheet" th:href="@{/static/asset/css/styles.css}"/>
 </head>
 <body>
