--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title th:text="${product.name}">상품명</title>
+    <title th:text="'제품 상세페이지 : ' + ${product.name}">상품명</title>
     <link rel="stylesheet" th:href="@{/static/asset/css/styles.css}"/>
 </head>
 <body>
