--- a/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
@@ -18,29 +18,31 @@
             <div class="category-bar">
                 <div class="menu-icon" alt="menu-icon"></div>
             </div>
-            <div class="non-category-bar">
-                <div class="non-category-bar__search-row">
-                    <div class="search-row__logo">
-                        <div class="main-logo-btn" alt="logo" onclick="location.href='/main'"></div>
+            <form action="/search" method="get">
+                <div class="non-category-bar">
+                    <div class="non-category-bar__search-row">
+                        <div class="search-row__logo">
+                            <div class="main-logo-btn" alt="logo" onclick="location.href='/main'"></div>
+                        </div>
+                            <input type="text" name="keyword" class="search-row__search-bar"/>
+                        <div class="search-row__mypage">
+                            <div><div class="my-coupang-icon"></div>마이쿠팡</div>
+                            <div><div class="my-coupang-title" id="cart" onclick="location.href='/cart/show'"></div><label for="cart">장바구니</label></div>
+                        </div>
                     </div>
-                    <div class="search-row__search-bar"></div>
-                    <div class="search-row__mypage">
-                        <div><div class="my-coupang-icon"></div>마이쿠팡</div>
-                        <div><div class="my-coupang-title" id="cart" onclick="location.href='/cart/show'"></div><label for="cart">장바구니</label></div>
+                    <div class="non-category-bar__detail-row">
+                        <span>로켓배송</span>
+                        <span>로켓프레시</span>
+                        <span>크리스마스</span>
+                        <span>로켓직구</span>
+                        <span>골드박스</span>
+                        <span>정기배송</span>
+                        <span>이벤트/쿠폰</span>
+                        <span>기획적</span>
+                        <span>여행/티켓</span>
                     </div>
                 </div>
-                <div class="non-category-bar__detail-row">
-                    <span>로켓배송</span>
-                    <span>로켓프레시</span>
-                    <span>크리스마스</span>
-                    <span>로켓직구</span>
-                    <span>골드박스</span>
-                    <span>정기배송</span>
-                    <span>이벤트/쿠폰</span>
-                    <span>기획적</span>
-                    <span>여행/티켓</span>
-                </div>
-            </div>
+            </form>
         </header>
     </div>
 </div>
