Working on payment API

--- a/src/main/webapp/WEB-INF/templates/member/registerForm.html
+++ b/src/main/webapp/WEB-INF/templates/member/registerForm.html
@@ -125,7 +125,7 @@
     </div>
 
 </form>
-    <script th:src="@{/static/asset/js/registerForm.js}">
+    <script type="module" th:src="@{/static/asset/js/member/registerForm.js}">
     </script>
 </body>
 
