--- a/src/main/webapp/static/asset/css/component/icon.css
+++ b/src/main/webapp/static/asset/css/component/icon.css
@@ -8,7 +8,26 @@
 .icon-wrapper img {
     transform: translate(-1px, 0px);
 }
-/* 더하기 빼기 아이콘 (장바구니에서 사용) */
+/* 더하기 등호 네모 아이콘 (장바구니에서 사용) */
+span.square-plus {
+    display: inline-block;
+    background: url(/static/asset/img/icon/square-plus-icon.gif);
+    width: 18px;
+    height: 18px;
+    margin: 0 1rem;
+    background-size: cover;
+    background-position: 0rem 0px;
+}
+span.square-equals {
+    display: inline-block;
+    background: url(/static/asset/img/icon/square-equals-icon.gif);
+    width: 18px;
+    height: 18px;
+    margin: 0 1rem;
+    background-size: cover;
+    background-position: 18px 0px;
+}
+/* 더하기 빼기 동그라미 아이콘 (장바구니에서 사용) */
 span.plus {
     background: url(/static/asset/img/icon/calculate-icon.png);
     width: 18px;
