--- a/src/main/webapp/WEB-INF/templates/cart/show.html
+++ b/src/main/webapp/WEB-INF/templates/cart/show.html
@@ -8,97 +8,115 @@
 <body>
     <div th:replace="fragments/simpleHeader :: simpleHeader" />
     <div class="main-wrapper">
-        <header class="cart-header">
-        </header>
-        <div class="cart-type">
-            <div class="cart-type__general selected">일반구매(0)</div>
-            <div class="cart-type__regular unselected">정기구매(0)</div>
-        </div>
-        <header class="cart-content-header">
-            <div class="check-box">
-                <input type="checkbox"/>
+        <div class="cart-wrapper">
+            <header class="cart-header">
+            </header>
+            <div class="cart-type">
+                <div class="cart-type__general selected">일반구매(0)</div>
+                <div class="cart-type__regular unselected">정기구매(0)</div>
             </div>
-            <div class="thumbnail">
-                전체선택
-            </div>
-            <div class="main-content">
-                상품정보
-            </div>
-            <div class="total-cost">
-                상품금액
-            </div>
-            <div class="delivery-cost">
-                배송비
-            </div>
-        </header>
-        <div class="cart-content">
-            <div class="cart-content__top">
-                <h1>로켓상품</h1><p>무료배송(19,800원 이상 구매가능)</p>
-            </div>
-            <div class="cart-content__item" th:each="rocket : ${rocketList}">
+            <header class="cart-content-header">
                 <div class="check-box">
-                    <input type="checkbox" alt="checkbox"/>
+                    <input class="check-all" type="checkbox" id="cart__check-for-all"/>
                 </div>
-                <div class="thumbnail" alt="thumbnail" >
-                    <img th:src="'/' + ${rocket.product.thumbnail}"/>
+                <div class="thumbnail">
+                    <label for="cart__check-for-all">전체선택</label>
                 </div>
                 <div class="main-content">
-                    <div class="product-info" th:value="${rocket.product.id}" th:text="${rocket.product.name}">상품명</div>
-                    <div>
-                        <div>예상배송시간</div>
-                        <div class="js-price cart-price" th:text="${rocket.product.price}">가격</div>
-                        <div class="js-count">
-                            <span class="minus"></span>
-                            <div class="js-quantity cart-quantity" th:text="${rocket.count}"></div>
-                            <span class="plus"></span>
+                    상품정보
+                </div>
+                <div class="total-cost">
+                    상품금액
+                </div>
+                <div class="delivery-cost">
+                    배송비
+                </div>
+            </header>
+            <div class="cart-content">
+                <div class="cart-content__top">
+                    <h1>로켓상품</h1><p>무료배송(19,800원 이상 구매가능)</p>
+                </div>
+                <div class="cart-content__item" th:each="rocket : ${rocketList}">
+                    <div class="check-box">
+                        <input class="check-to-buy" type="checkbox" alt="checkbox"/>
+                    </div>
+                    <div class="thumbnail" alt="thumbnail" >
+                        <a th:href="'/product/' + ${rocket.product.id}">
+                            <img th:src="'/' + ${rocket.product.thumbnail}"/>
+                        </a>
+                    </div>
+                    <div class="main-content">
+                        <div class="product-info" th:value="${rocket.product.id}" th:text="${rocket.product.name}"
+                        th:onclick="'location.href=\'/product/' + ${rocket.product.id} + '\''">
+                                상품명
+                        </div>
+                        <div>
+                            <div>예상배송시간</div>
+                            <div class="js-price cart-price" th:text="${rocket.product.price}">가격</div>
+                            <div class="js-count">
+                                <span class="minus"></span>
+                                <div class="js-quantity cart-quantity" th:text="${rocket.count}"></div>
+                                <span class="plus"></span>
+                            </div>
                         </div>
                     </div>
+                    <div class="total-cost js-price"></div>
+                    <div class="delivery-cost js-price" th:if="${rocket.product.is_rocket eq 'on'}" th:text="0"></div>
+                    <div class="delivery-cost js-price" th:if="${rocket.product.is_rocket ne 'on'}" th:text="2500"></div>
                 </div>
-                <div class="total-cost js-price"></div>
-                <div class="delivery-cost js-price" th:if="${rocket.product.is_rocket eq 'on'}" th:text="0"></div>
-                <div class="delivery-cost js-price" th:if="${rocket.product.is_rocket ne 'on'}" th:text="2500"></div>
-            </div>
-            <div class="cart-content__summary">
-                상품가격&nbsp<span class="summary__item-cost js-price">0</span>
-                <span class="plus"></span>
-                배송비<span class="hidden summary__delivery-cost">0</span>&nbsp<strong class="summary__delivery-cost">무료</strong>
-                <span class="equals"></span>
-                주문금액&nbsp<strong class="summary__total-cost js-price">0</strong>
-            </div>
-        </div>
-        <div class="cart-content">
-            <div class="cart-content__top">
-                <h1>판매자배송 상품</h1>
-            </div>
-            <div class="cart-content__item" th:each="normal : ${normalList}">
-                <div class="check-box">
-                    <input type="checkbox" alt="checkbox"/>
+                <div class="cart-content__summary">
+                    상품가격&nbsp<span class="summary__item-cost js-price">0</span>
+                    <span class="plus"></span>
+                    배송비<span class="hidden summary__delivery-cost">0</span>&nbsp<strong class="summary__delivery-cost">무료</strong>
+                    <span class="equals"></span>
+                    주문금액&nbsp<strong class="summary__total-cost js-price">0</strong>
                 </div>
-                <div class="thumbnail" alt="thumbnail" >
-                    <img th:src="'/' + ${normal.product.thumbnail}"/>
+            </div>
+            <div class="cart-content">
+                <div class="cart-content__top">
+                    <h1>판매자배송 상품</h1>
                 </div>
-                <div class="main-content">
-                    <div class="product-info" th:value="${normal.product.id}" th:text="${normal.product.name}">상품명</div>
-                    <div>
-                        <div>예상배송시간</div>
-                        <div class="js-price cart-price" th:text="${normal.product.price}">가격</div>
-                        <div class="js-count">
-                            <span class="minus"></span>
-                            <div class="js-quantity cart-quantity" th:text="${normal.count}"></div>
-                            <span class="plus"></span>
+                <div class="cart-content__item" th:each="normal : ${normalList}">
+                    <div class="check-box">
+                        <input class="check-to-buy" type="checkbox" alt="checkbox"/>
+                    </div>
+                    <div class="thumbnail" alt="thumbnail" >
+                        <img th:src="'/' + ${normal.product.thumbnail}"/>
+                    </div>
+                    <div class="main-content">
+                        <div name="name" class="product-info" th:value="${normal.product.id}" th:text="${normal.product.name}">상품명</div>
+                        <div>
+                            <div>예상배송시간</div>
+                            <div class="js-price cart-price" th:text="${normal.product.price}">가격</div>
+                            <div class="js-count">
+                                <span class="minus"></span>
+                                <div class="js-quantity cart-quantity" th:text="${normal.count}"></div>
+                                <span class="plus"></span>
+                            </div>
                         </div>
                     </div>
+                    <div class="total-cost js-price"></div>
+                    <div class="delivery-cost js-price" th:if="${normal.product.is_rocket eq 'on'}" th:text="0"></div>
+                    <div class="delivery-cost js-price" th:if="${normal.product.is_rocket ne 'on'}" th:text="2500"></div>
                 </div>
-                <div class="total-cost js-price"></div>
-                <div class="delivery-cost js-price" th:if="${normal.product.is_rocket eq 'on'}" th:text="0"></div>
-                <div class="delivery-cost js-price" th:if="${normal.product.is_rocket ne 'on'}" th:text="2500"></div>
+                <div class="cart-content__summary">
+                    상품가격&nbsp<span class="summary__item-cost js-price">0</span>
+                    <span class="plus"></span>
+                    배송비&nbsp<span class="summary__delivery-cost js-price">0</span>
+                    <span class="equals"></span>
+                    주문금액&nbsp<strong class="summary__total-cost js-price">0</strong>
+                </div>
             </div>
-            <div class="cart-content__summary">
-                상품가격&nbsp<span class="summary__item-cost js-price">0</span>
-                <span class="plus"></span>
-                배송비&nbsp<span class="summary__delivery-cost js-price">0</span>
-                <span class="equals"></span>
-                주문금액&nbsp<strong class="summary__total-cost js-price">0</strong>
+            <div class="cart-grand-summary">
+                총 상품가격 <span class="emphasize grand-item-cost js-price">33000</span>
+                <span class="square-plus" aria-placeholder="더하기"></span>
+                총 배송비 <span class="emphasize grand-delivery-cost js-price">0</span>
+                <span class="square-equals" aria-placeholder="결과는"></span>
+                총 주문금액 <span class="red-emphasize grand-total-cost js-price">33000</span>
+            </div>
+            <div class="buttons">
+                <button class="js-home white-button">계속 쇼핑하기</button>
+                <button class="js-purchase blue-button">구매하기</button>
             </div>
         </div>
     </div>
