--- a/src/main/webapp/static/asset/css/component/button.css
+++ b/src/main/webapp/static/asset/css/component/button.css
@@ -1,3 +1,11 @@
+.white-button {
+    background: white;
+    color: var(--deep-blue);
+    padding: 0.8rem 1.2rem;
+    border: 1px solid var(--deep-blue);
+    font-weight: 600;
+    border-radius: 0.2rem;
+}
 .blue-button {
     background: var(--deep-blue);
     color: white;
