Revise Product/detail

--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div th:replace="fragments/searchHeader :: searchHeader" />
-    <form id="detailForm" th:action="'/product/checkout/productId='+${product.id}">
-        <div class="product-detail-header main-wrapper">
+    <form id="detailForm" th:action="'ct.id}">
+        <div class="product-detail-head/product/checkout/productId='+${produer main-wrapper">
             <div class="product-detail-header__pic">
                 <div>
                     <img th:src="'../'+${product.thumbnail}" alt="thumbnail"/>
